overflow bug

--- a/css/styles.css
+++ b/css/styles.css
@@ -88,7 +88,7 @@ table {
 
 html,
 body {
-    overflow-x: hidden;
+    /*overflow-x: hidden;*/
 }
 
 body {
@@ -113,6 +113,7 @@ body {
 	/*font-family: 'Limelight', cursive;*/
 	/*font-family: 'Allerta Stencil', sans-serif;*/
 	margin: auto;
+	height: 100%;
 }
 
 h1,
@@ -212,6 +213,8 @@ h2 {
 	border-radius: 5px;
 	padding: 20px;
 	margin: 10px;
+	height: 100px;
+	width: 19.5%;
 	box-shadow: 0 5px 5px -2px rgba(0, 0, 0, 0.7);
 	transition: 0.2s;
 	color: black;
@@ -220,7 +223,7 @@ h2 {
 }
 .card:hover {
 	box-shadow: 0 15px 15px -5px rgba(0, 0, 0, 0.7);
-	transform: scale(1.2);
+	transform: scale(1.1);
 }
 
 .card img {
@@ -262,7 +265,7 @@ h2 {
 	background-attachment: fixed;
 }
 #skills .content {
-	padding: 5% 12.5%;
+	padding: 2%;
 }
 
 #projects .title-strip {
